--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>BAULA</title>
+  <!-- Favicon / App Icons -->
+  <link rel="icon" href="assets/ball.png" type="image/png" />
+  <link rel="shortcut icon" href="assets/ball.png" type="image/png" />
+  <link rel="apple-touch-icon" href="assets/ball.png" />
   <style>
     * {
       margin: 0;
